<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/hi_try_to_guess_the_number_which_i_ve_selected_for_you_from_1_to_451_as_soon_as_possible_i_will_give_you_some_tips_let_s_go"
            android:layout_width="352dp"
            android:layout_height="79dp"
            android:id="@+id/descrTV" android:textSize="17sp"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:paddingTop="10dp"/>
    <EditText
            android:layout_width="112dp"
            android:layout_height="49dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/numberET"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/prnumbTV" android:hint="@string/give_number" android:gravity="center"
            android:autofillHints=""/>
    <TextView
            android:text="@string/your_predicted_number"
            android:layout_width="302dp"
            android:layout_height="45dp"
            android:id="@+id/prnumbTV" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="22sp"
            android:textAlignment="center" android:textColor="@color/colorPrimary" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descrTV" android:gravity="center"/>
    <TextView
            android:layout_width="291dp"
            android:layout_height="67dp"
            android:id="@+id/resultTV" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textSize="26sp"
            android:textAlignment="center" android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/checkButton"
            android:gravity="center" android:textStyle="bold"/>
    <TextView
            android:layout_width="282dp"
            android:layout_height="41dp"
            android:id="@+id/advicesTV" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resultTV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" android:textSize="22sp" android:gravity="center"
            android:textStyle="italic"/>
    <Button
            android:text="@string/check"
            android:layout_width="198dp"
            android:layout_height="64dp"
            android:id="@+id/checkButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@android:color/white" android:background="@android:color/black"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/numberET"/>
    <TextView
            android:layout_width="117dp"
            android:layout_height="28dp"
            android:id="@+id/attemptsTV" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:layout_marginBottom="11dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="viewStart"/>
    <Button
            android:text="@string/change_font"
            android:layout_width="136dp"
            android:layout_height="49dp"
            android:id="@+id/fontButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="136dp"
            android:layout_height="49dp"
            android:id="@+id/newGameButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp" app:layout_constraintBottom_toTopOf="@+id/fontButton"/>
</android.support.constraint.ConstraintLayout>